fixed column layout issues

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -133,6 +133,7 @@ $selected: #e5fbff;
 	padding: 0;
 	margin-right: 10px;
 	width: 323px; //32%;
+	margin-bottom: 0;
 
 	li {
 
